Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3577

Partitions on multiple filesystems breaks with S3_SKIP_INSERT_STAGING

    XMLWordPrintableJSON

Details

    Description

      The HdfsTableSink usualy creates a HDFS connection to the filesystem that the base table resides in. However, if we create a partition in a FS different than that of the base table and set S3_SKIP_INSERT_STAGING to "true", the table sink will try to write to a different filesystem with the wrong filesystem connector.

      Current workaround: Set S3_SKIP_INSERT_STAGING to "false".
      Considering a table on HDFS with a partition on S3 (just an example), this works because the table sink stages the files to the FS that the base table resides in (i.e. HDFS) and only the coordinator, who is aware of multiple filesystems, moves it to the right FS (i.e. S3).

      Attachments

        Activity

          People

            sailesh Sailesh Mukil
            sailesh Sailesh Mukil
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: