tests/query_test/test_multiple_filesystems.py
@@ -2,20 +2,18 @@
 # Validates table stored on the LocalFileSystem.
 #
 import pytest
-from subprocess import check_call
+import os
+from subprocess import check_call, call
 from tests.common.impala_test_suite import ImpalaTestSuite
 from tests.common.test_dimensions import create_single_exec_option_dimension
-from tests.common.skip import SkipIf, SkipIfIsilon, SkipIfS3
-from tests.util.filesystem_utils import get_fs_path
+from tests.common.skip import SkipIf
+from tests.util.filesystem_utils import get_secondary_fs_path, S3_BUCKET_NAME, ISILON_NAMENODE
 
-@SkipIf.default_fs # Run only when a non-default filesystem is available.
-@SkipIfIsilon.untriaged # Missing coverage: Find out why this is failing.
+@SkipIf.no_secondary_fs
 class TestMultipleFilesystems(ImpalaTestSuite):
   """
   Tests that tables and queries can span multiple filesystems.
   """
-
-  TEST_DB = 'multi_fs_db'
 
   @classmethod
   def get_workload(self):
@@ -30,21 +28,24 @@ class TestMultipleFilesystems(ImpalaTestSuite):
         v.get_value('table_format').file_format == 'text' and \
         v.get_value('table_format').compression_codec == 'none')
 
-  def setup_method(self, method):
-    self.cleanup_db(self.TEST_DB)
-    # Note: Purposely creates database on the default filesystem. Do not specify location.
-    self.client.execute("create database %s" % self.TEST_DB)
-    self._populate_hdfs_partitions()
+  def _populate_secondary_fs_partitions(self, db_name):
+    # This directory may already exist. So we needn't mind if this call fails.
+    call(["hadoop", "fs", "-mkdir", get_secondary_fs_path("/multi_fs_tests/")], shell=False)
+    check_call(["hadoop", "fs", "-mkdir",
+                get_secondary_fs_path("/multi_fs_tests/%s.db/" % db_name)], shell=False)
+    check_call(["hadoop", "fs", "-cp", "/test-warehouse/alltypes_parquet/",
+                get_secondary_fs_path("/multi_fs_tests/%s.db/" % db_name)], shell=False)
+    check_call(["hadoop", "fs", "-cp", "/test-warehouse/tinytable/",
+                get_secondary_fs_path("/multi_fs_tests/%s.db/" % db_name)], shell=False)
 
-  def teardown_method(self, method):
-    self.cleanup_db(self.TEST_DB)
-
-  def _populate_hdfs_partitions(self):
-    """ Copy some data to defaultFS HDFS filesystem so that the test can verify tables
-    that span the default (HDFS) and secondary filesystem (e.g. S3A)."""
-    check_call(["hadoop", "fs", "-cp",
-                get_fs_path("/test-warehouse/alltypes_parquet"),
-                "/test-warehouse/%s.db/" % self.TEST_DB], shell=False)
-
-  def test_local_filesystem(self, vector):
-    self.run_test_case('QueryTest/multiple-filesystems', vector, use_db=self.TEST_DB)
+  @pytest.mark.execute_serially
+  def test_multiple_filesystems(self, vector, unique_database):
+    try:
+      self._populate_secondary_fs_partitions(unique_database)
+      self.run_test_case('QueryTest/multiple-filesystems', vector, use_db=unique_database)
+    finally:
+      # We delete this from the secondary filesystem here because the database was created
+      # in HDFS but the queries will create this path in the secondary FS as well. So
+      # dropping the database will not delete the directory in the secondary FS.
+      check_call(["hadoop", "fs", "-rm", "-r",
+          get_secondary_fs_path("/multi_fs_tests/%s.db/" % unique_database)], shell=False)
